--- a/DeveloppementD_interfacesWebs/R1.02/TP01/cv.html
+++ b/DeveloppementD_interfacesWebs/R1.02/TP01/cv.html
@@ -22,7 +22,7 @@
         <p>My Projects: <a href="https://github.com/Bakame03">Disponibles sur Github Cliquez ici</a></p>
 
         <p style="text-align: center;">
-            <img src="photo.jpg" alt="Profile Photo" height="200" />
+            <img src="Alex.jpeg" alt="Profile Photo" height="200" />
         </p>
 
         <nav aria-label="Sommaire">
@@ -91,10 +91,10 @@
                     <td>Nom</td>
                 </tr>
                 <tr>
-                    <td colspan="3">Semestre 1</td>
+                    <td colspan="3" class="semestre">Semestre 1</td>
                 </tr>
                 <tr>
-                    <td rowspan="12">Cours</td>
+                    <td rowspan="12" class="cours">Cours</td>
                     <td>R1.01</td>
                     <td>Initiation au développement</td>
                 </tr>
@@ -143,7 +143,7 @@
                     <td>Projet professionnel et personnel</td>
                 </tr>
                 <tr>
-                    <td rowspan="6">SAé</td>
+                    <td rowspan="6" class="sae">SAé</td>
                     <td>S1.01</td>
                     <td>Implémentation d'un besoin client</td>
                 </tr>
