--- a/DeveloppementD_interfacesWebs/R1.02/TP01/cv.html
+++ b/DeveloppementD_interfacesWebs/R1.02/TP01/cv.html
@@ -25,6 +25,10 @@
             <img src="Alex.jpeg" alt="Profile Photo" height="200" />
         </p>
 
+        <div class="motivation">
+            <p>Passionné par l'informatique et le développement logiciel, je suis actuellement en première année de BUT Informatique. Mon objectif est d'acquérir une solide expertise en programmation et en architecture des systèmes pour contribuer à des projets innovants. Je suis motivé par l'envie d'apprendre continuellement et de relever des défis techniques qui me permettront de devenir un développeur compétent et créatif.</p>
+        </div>
+
         <nav aria-label="Sommaire">
             <ul>
                 <li><a href="#formation">Formation</a></li>
