LastCpmmitForTP4(next->ex12)

--- a/DeveloppementD_interfacesWebs/R1.02/TP4/tp4.html
+++ b/DeveloppementD_interfacesWebs/R1.02/TP4/tp4.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Mon petit cinéma</title>
     <link rel="stylesheet" href="style_tp4.css" />
 </head>
@@ -84,7 +85,7 @@
                 </article>
             </section>
 
-            <aside id="auteur">
+            <aside id="auteur" class="petit_ecran">
                 <h3>L'auteur</h3>
                 <img src="auteur.jpeg" alt="Photo de l'auteur" />
                 <p><strong>Prénom Nom</strong> est fan de cinéma. Depuis tout petit il fréquente les salles obscures.
