--- a/DeveloppementD_interfacesWebs/R1.02/TP6/a_propos.html
+++ b/DeveloppementD_interfacesWebs/R1.02/TP6/a_propos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TP6, Première page avec Bootstrap</title>
+    <title>TP6 - À Propos</title>
     <link rel="stylesheet" href="bootstrap-5.3.8-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,8 +12,8 @@
             <header>
                 <div class="p-5 mb-4 bg-light rounded-3">
                     <div class="container-fluid py-5">
-                        <h1 class="display-5 fw-bold">Bootstrap First "Hello World !!!" page</h1>
-                        <p class="col-md-8 fs-4">Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
+                        <h1 class="display-5 fw-bold">À Propos</h1>
+                        <p class="col-md-8 fs-4">Apprenez-en plus sur notre entreprise et notre mission.</p>
                     </div>
                 </div>
             </header>
@@ -22,13 +22,13 @@
                 <nav class="col-sm-3">
                     <ul class="nav flex-column nav-pills">
                         <li class="nav-item">
-                            <a class="nav-link active" href="index.html">Accueil</a>
+                            <a class="nav-link" href="index.html">Accueil</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="produits.html">Produits</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="a_propos.html">A propos</a>
+                            <a class="nav-link active" href="a_propos.html">A propos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
@@ -38,24 +38,17 @@
 
                 <section class="col-sm-9">
                     <article>
-                        <h2>Premier Article <small>Sous-titre</small></h2>
+                        <h2>Notre Histoire <small>Depuis 2010</small></h2>
                         <p class="text-end small">3 décembre 2025</p>
                         <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         <p class="text-justify">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </article>
 
                     <article>
-                        <h2>Deuxième Article <small>Sous-titre</small></h2>
+                        <h2>Notre Mission <small>Engagement envers l'excellence</small></h2>
                         <p class="text-end small">2 décembre 2025</p>
                         <p class="text-justify">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                         <p class="text-justify">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                    </article>
-
-                    <article>
-                        <h2>Troisième Article <small>Sous-titre</small></h2>
-                        <p class="text-end small">1er décembre 2025</p>
-                        <p class="text-justify">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
-                        <p class="text-justify">Similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio nam libero tempore, cum soluta nobis est eligendi optio.</p>
                     </article>
                 </section>
             </div>
