TP6_Done--->TP7_Started

--- a/DeveloppementD_interfacesWebs/R1.02/TP6/a_propos.html
+++ b/DeveloppementD_interfacesWebs/R1.02/TP6/a_propos.html
@@ -38,17 +38,50 @@
 
                 <section class="col-sm-9">
                     <article>
-                        <h2>Notre Histoire <small>Depuis 2010</small></h2>
-                        <p class="text-end small">3 décembre 2025</p>
-                        <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <p class="text-justify">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    </article>
-
-                    <article>
-                        <h2>Notre Mission <small>Engagement envers l'excellence</small></h2>
-                        <p class="text-end small">2 décembre 2025</p>
-                        <p class="text-justify">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                        <p class="text-justify">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                        <h2>Les membres de l'entreprise</h2>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-hover">
+                                <thead class="table-light">
+                                    <tr>
+                                        <th scope="col">Prénom</th>
+                                        <th scope="col">Nom</th>
+                                        <th scope="col">Adresse Email</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Jean</td>
+                                        <td>Dupont</td>
+                                        <td>jean.dupont@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Marie</td>
+                                        <td>Martin</td>
+                                        <td>marie.martin@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Pierre</td>
+                                        <td>Bernard</td>
+                                        <td>pierre.bernard@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Sophie</td>
+                                        <td>Dubois</td>
+                                        <td>sophie.dubois@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Luc</td>
+                                        <td>Laurent</td>
+                                        <td>luc.laurent@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Isabelle</td>
+                                        <td>Moreau</td>
+                                        <td>isabelle.moreau@example.com</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </article>
                 </section>
             </div>
