--- a/DeveloppementD_interfacesWebs/R1.02/TP6/produits.html
+++ b/DeveloppementD_interfacesWebs/R1.02/TP6/produits.html
@@ -37,19 +37,53 @@
                 </nav>
 
                 <section class="col-sm-9">
-                    <article>
-                        <h2>Produits Populaires <small>Best-sellers</small></h2>
-                        <p class="text-end small">3 décembre 2025</p>
-                        <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <p class="text-justify">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    </article>
+                    <div class="row mb-4">
+                        <div class="col-md-4">
+                            <article>
+                                <h3>Article 1 New <span class="badge bg-primary">New</span></h3>
+                                <img class="img-fluid mb-3" src="produit1.jpg" alt="Produit 1">
+                                <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </article>
+                        </div>
+                        <div class="col-md-4">
+                            <article>
+                                <h3>Article 2</h3>
+                                <img class="img-fluid mb-3" src="produit2.jpg" alt="Produit 2">
+                                <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </article>
+                        </div>
+                        <div class="col-md-4">
+                            <article>
+                                <h3>Article 3 New <span class="badge bg-primary">New</span></h3>
+                                <img class="img-fluid mb-3" src="produit3.jpg" alt="Produit 3">
+                                <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </article>
+                        </div>
+                    </div>
 
-                    <article>
-                        <h2>Nouveaux Produits <small>Collection 2025</small></h2>
-                        <p class="text-end small">2 décembre 2025</p>
-                        <p class="text-justify">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                        <p class="text-justify">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                    </article>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <article>
+                                <h3>Article 4</h3>
+                                <img class="img-fluid mb-3" src="produit4.jpeg" alt="Produit 4">
+                                <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </article>
+                        </div>
+                        <div class="col-md-4">
+                            <article>
+                                <h3>Article 5 New <span class="badge bg-primary">New</span></h3>
+                                <img class="img-fluid mb-3" src="produit5.jpg" alt="Produit 5">
+                                <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </article>
+                        </div>
+                        <div class="col-md-4">
+                            <article>
+                                <h3>Article 6</h3>
+                                <img class="img-fluid mb-3" src="produit6.jpg" alt="Produit 6">
+                                <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </article>
+                        </div>
+                    </div>
                 </section>
             </div>
 
